codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_durable_message_without_edit_hint.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
assertion_line: 228
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 2 },
    content: [
        "• Queued follow-up inputs                       ",
        "  ↳ [deploy-hook] run the release check         ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 39, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
