codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_oversized_preview_url.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
expression: visible
---
• Queued follow-up inputs       
  ↳ Review                      
    https://github.com/openai/co
    ⇧← edit last queued message
